--- a/src/style.css
+++ b/src/style.css
@@ -11,8 +11,7 @@
     src: url(./IRAN\ Kharazmi\ -\ Copy.wff2);
 }
 body {
-    background-color: black ;
-    padding-top: 50px;
+    background-image: linear-gradient(35deg,black ,  rgb(23, 23, 77));
     position: relative;
     color: white;
 }
@@ -29,7 +28,7 @@ header .l button{
 
 main {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
 .color {
@@ -52,27 +51,28 @@ p {
     width: 80px;
     height: 30px;
     border-radius: 10px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 20px;
     margin-top: 20px;
-    background-image: linear-gradient(to right, #fe00009b, #006affa8);
+    padding: 20px;
+    background-color: rgb(0, 119, 255);
     color: white;
-}
-
-#showCode:hover {
-    background-image: linear-gradient(to right, #fe0000, #006aff);
-    border: none;
     cursor: pointer;
 }
 
+
 #b{
     width: 200px;
+    display: none;
 }
 .p1{
     width: 350px;
     height: 200px;
     background-image: linear-gradient(to right,rgb(0, 255, 132),rgb(0, 119, 255));
-    padding: 10px;
+    padding: 14px;
+    border-radius:10px ;
 }
 
 
@@ -80,31 +80,32 @@ p {
     width: 350px;
     height: 200px;
     background-image: linear-gradient(to right,rgb(128, 0, 2),rgb(60, 0, 255));
-    padding: 10px;
+    padding: 14px;
+    border-radius:10px ;
 }
 
 .p3{
-    width: 350px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     background-image: linear-gradient(to right,rgb(234, 0, 255),rgb(0, 195, 255));
-    padding: 10px;
+    padding: 14px;
+    border-radius:100% ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .hestory{
     margin-top: 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 150px;
+    flex-wrap: wrap;
     align-items: center;
     position: relative;
 }
-.hestory::before{
-    content: "سابقه";
-    top: -120px;
-    right: 0;
-    position: absolute;
-    font-size: 28px;
-    color: white;
-}
+
 .b{
     border: 2px solid white;
     margin-top: 20px;
@@ -124,35 +125,28 @@ footer{
     color: black;
 }
 
+.l{
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+    align-items: center;
+    }
 
 header .l button{
 display: flex;
 justify-content: center;
 align-items: center;
-width: 80px;
+width: 120px;
 height: 40px;
-background-image: linear-gradient(to right, #fe00009b, #006affa8);
+background-color: rgb(0, 119, 255);
 border-radius: 10px;
 border: none;
 color: white;
 font-size: 20px;
 
-}
-#b{
-    display: none;
-}
-.l{
-display: flex;
-justify-content: space-between;
-width: 200px;
-align-items: center;
+
 }
 
-header .l button:hover{
-background-image: linear-gradient(to right, #fe0000, #006aff);
-cursor: pointer;
-color: white;
-}
 #div2{
     display: flex;
     flex-direction: column;
@@ -170,7 +164,7 @@ color: white;
     font-family: monospace;
     position: absolute;
     content: "";
-    top: -600px;
+    top: -700px;
     left: 540px; 
     transition: all 2s;
 }
@@ -187,7 +181,7 @@ color: white;
     outline: none;
 }
 button{
-    background-image: linear-gradient(to right, #fe0000, #006aff);
+    background-color: rgb(0, 119, 255);
     width: 140px;
     height: 40px;
     border: none;
@@ -203,4 +197,7 @@ button{
     border-radius: 5px;
     border: .5px solid gray;
     padding: 5px;
+}
+#close{
+    background-color: gray;
 }
